tests/sksl/errors/ArrayIndexOutOfRange.glsl
### Compilation failed:

error: 1: index -1 out of range for 'int[123]'
error: 4: index 123 out of range for 'half4x4[123]'
error: 5: index 1000000000 out of range for 'int4[123]'
error: 6: index 3000000000 out of range for 'half3[123]'
error: 7: missing index in '[]'
error: 9: index -1 out of range for 'half4'
error: 14: index 4 out of range for 'half4'
error: 15: index 1000000000 out of range for 'half4'
error: 17: index -1 out of range for 'half3'
error: 21: index 3 out of range for 'half3'
error: 22: index 4 out of range for 'half3'
error: 23: index 1000000000 out of range for 'half3'
error: 25: index -1 out of range for 'half2'
error: 28: index 2 out of range for 'half2'
error: 29: index 3 out of range for 'half2'
error: 30: index 4 out of range for 'half2'
error: 31: index 1000000000 out of range for 'half2'
error: 33: index -1 out of range for 'half2x4'
error: 36: index 2 out of range for 'half2x4'
error: 37: index 3 out of range for 'half2x4'
error: 38: index 4 out of range for 'half2x4'
error: 39: index 1000000000 out of range for 'half2x4'
error: 41: index -1 out of range for 'half3x3'
error: 45: index 3 out of range for 'half3x3'
error: 46: index 4 out of range for 'half3x3'
error: 47: index 1000000000 out of range for 'half3x3'
error: 49: index -1 out of range for 'half4x2'
error: 54: index 4 out of range for 'half4x2'
error: 55: index 1000000000 out of range for 'half4x2'
error: 57: index -1 out of range for 'half2'
error: 60: index 2 out of range for 'half2'
error: 61: index 1000000000 out of range for 'half2'
error: 63: index -1 out of range for 'half3'
error: 67: index 3 out of range for 'half3'
error: 68: index 1000000000 out of range for 'half3'
error: 70: index -1 out of range for 'half4'
error: 75: index 4 out of range for 'half4'
error: 76: index 1000000000 out of range for 'half4'
38 errors
